macros/tests/ui/gprogram_must_be_inline.rs
use gprogram_framework_macros::gprogram;

#[gprogram]
mod gprogram_mod;

fn main() {}
